fix: revert horizontal scrolling in iOS

--- a/components/MarkdownView/MarkdownView.module.scss
+++ b/components/MarkdownView/MarkdownView.module.scss
@@ -69,6 +69,6 @@
 
 .codeBlock {
   width: 100%;
-  overflow: scroll !important;
-  -webkit-overflow-scrolling: touch !important;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
